--- a/src/App.css
+++ b/src/App.css
@@ -134,6 +134,11 @@ h3 {
   transition: background-color 0.3s ease;
 }
 
+.logo-name-container {
+  display: flex;
+  flex-direction: row-reverse;
+}
+
 .apply-button:hover {
   background-color: var(--Vimto);
 }
@@ -141,6 +146,12 @@ h3 {
 .apply-button a {
   color: inherit;
   text-decoration: none;
+}
+
+.result-logo {
+  width: 50%; /* Use percentage for responsiveness */
+  max-width: 216px; /* Scaled from 120px */
+  height: 50%; /* Maintain aspect ratio */
 }
 
 @media (max-width: 800px) {
