--- a/src/App.css
+++ b/src/App.css
@@ -291,3 +291,10 @@ h3 {
     text-align: center;
   }
 }
+
+
+.enter-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
