--- a/src/App.css
+++ b/src/App.css
@@ -40,8 +40,6 @@ html {
   width: 100%;
 }
 
-
-
 .card {
   padding: 3.6rem; /* Increased from 2rem */
   background-color: white;
@@ -146,8 +144,27 @@ h3 {
   margin: 1rem auto 0 auto;
 }
 
-.nav-button-container{
+.nav-button-container {
   display: flex;
+  justify-content: center;
+}
+
+
+.react-select{
+width: 80%;
+}
+
+.optionsContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+}
+
+.methodContainer {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  align-items: center;
 }
 
 .nav-button {
@@ -165,7 +182,25 @@ h3 {
   margin: 1rem;
   text-decoration: none;
   text-align: center;
-  
+}
+
+.goback-button {
+  display: flex;
+  justify-content: space-between;
+  background-color: var(--ChippyTea);
+  color: var(--Graphine);
+  font-size: 0.8rem; /* Increased from 1rem */
+  padding: 0.5rem 1.2rem; /* Increased from 0.5rem 1rem */
+  border: none;
+  border-radius: 9px; /* Increased from 5px */
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin-top: 0.1rem;
+  display: block;
+  width: 20%;
+  margin: 1rem;
+  text-decoration: none;
+  text-align: center;
 }
 
 .logo-name-container {
@@ -286,7 +321,6 @@ h3 {
   .result-logo {
     width: 80px;
   }
-
 }
 
 @media (max-width: 500px) {
@@ -309,4 +343,5 @@ h3 {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 70%;
 }
